# rust-zabbix

./: Cargo.toml  zabbix_server_list.csv
src/: lib.rs  main.rs
src/zabbix/api/: item.rs  mod.rs  trend.rs  user.rs
