[package]
edition = "2018"
name = "rust-zabbix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
csv = "1.1.6"
rand = "0.8.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
